# HyperSwarm---Trading-Multi-Agent-System

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md
backend/guardian_agent/: .env.example  README.md  pyproject.toml  requirements.txt
backend/guardian_agent/data/: README.md
backend/guardian_agent/data/historical/: .gitkeep
backend/guardian_agent/data/models/: .gitkeep
backend/guardian_agent/data/training_runs/: .gitkeep
backend/guardian_agent/data/visualizations/: .gitkeep
backend/guardian_agent/guardian/: __init__.py  settings.py  urls.py  wsgi.py
backend/guardian_agent/risk/: __init__.py  apps.py  urls.py  views.py
backend/guardian_agent/risk/management/commands/: evaluate_policy.py  fetch_historical_data.py  show_training.py  train_policy.py
backend/guardian_agent/risk/utils/: __init__.py  approval_engine.py  hyperliquid_client.py  json_storage.py  logger.py  redis_cache.py  risk_calculator.py
backend/guardian_agent/risk/utils/reflexion/: __init__.py  memory.py  reflector.py
backend/guardian_agent/risk/utils/rl/: __init__.py  data_loader.py  environment.py  policy.py  reward_calculator.py  state_encoder.py  training_history.py  visualizer.py
backend/guardian_agent/tests/: __init__.py  test_api.py  test_approval_engine.py  test_redis_cache.py  test_risk_calculator.py  test_rl.py
backend/onboarder_agent/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
backend/onboarder_agent/bridge/: apps.py  urls.py  views.py
backend/onboarder_agent/bridge/utils/: hyperliquid_client.py  json_storage.py  lifi_client.py  redis_cache.py  route_calculator.py
backend/onboarder_agent/onboarder/: asgi.py  settings.py  urls.py  wsgi.py
backend/onboarder_agent/tests/: test_api.py  test_lifi_client.py  test_routes.py  test_transactions.py
(+90 files in other folders)
