[project]
name = "guardian-agent"
version = "0.1.0"
description = "Risk management and RL-based trade approval agent for HyperSwarm"
requires-python = ">=3.10"
dependencies = [
    # Django Stack
    "Django==5.0.1",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",

    # Data & Cache
    "redis==5.0.1",
    "hiredis==2.3.2",
    "requests==2.31.0",

    # Trading
    "hyperliquid-python-sdk==0.4.0",

    # AI/ML
    "anthropic==0.18.0",
    "numpy==1.26.3",

    # RL Training
    "torch>=2.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "ta>=0.11.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.15.0",

    # Utils
    "python-dotenv==1.0.0",
    "coverage==7.4.0",
]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/migrations/*", "manage.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
